2.0.2
=====
Bugfixes:
 * Crash on start when checking device capabilities (246822)
 * Search paths on "Programs" options are not saved (248648)
 * Crash on generation of DVD previews in DVD ripping list (249941, 253639)
 * Crash on closing dialog after succesful audio CD ripping (241630)
 * Crash on device detection (249371)
 * Crash when showing settings window (238819)
 * Fixed playlist sort order (249395)

2.0.1
=====
Bugfixes:
 * Freeze on ripping Audio CD using external encoder to MP3 or FLAC (236466)
 * Drag and drop from Dolphin doesn't work (242745)
 * Symbolic links are not added to a project when a folder is added recursively (243555)
 * Install app icons to hicolor so that they are visible in non KDE WMs
   (https://bugzilla.novell.com/show_bug.cgi?id=619731)
 * Translation fixes
 * Overburn doesn't work (241534)
 * Data part of mixed CD is not written - searching for previous session doesn't work (246798)
 * Fixed the speed comparision and formatting when cdrecord changes the writing speed automatically (246262, 243482)
 * Track pointer seg fault (247588)

2.0
===
Changes (since 1.0.5):
 * Port to KDE Platform 4
 * Always allow manual writing speed selection.
 * Use proper toolbars instead of the toolboxes -> nicer layouting with different styles
 * Merged CD and DVD copy dialogs
 * Merged CD and DVD image burning dialogs
 * Merged CD-RW erasing and DVD formatting dialogs
 * Merged Data CD and Data DVD projects into one plain data project with Blu-ray support
 * Merged eMovix CD and eMovix DVD projects
 * Removed CD copy option "prefere CD-Text". K3b will now ask individually (there is no need to do this if no mounting is involved.)
 * Allow importing of arbitrary sessions into a data project, thus continuing other than the last session.
 * "Clear" project" now only clears the added data but leaves the settings as they were (bug 147838)
 * Support files bigger than 4GB via mkisofs 2.01.01a32 and above